--- a/TREES/Sum of nodes on the longest path from root to leaf node/readme
+++ b/TREES/Sum of nodes on the longest path from root to leaf node/readme
@@ -1,1 +1,1 @@
-leaf node here does not matter as ,if length increases the sum would also increases
+Leaf node here does not matter as ,as longest path would always terminate/end  at leaf node only.
