--- a/RECURSION/FIND UNIQUE BINARY STRING (LC 1980)/README
+++ b/RECURSION/FIND UNIQUE BINARY STRING (LC 1980)/README
@@ -5,13 +5,13 @@ Cantor's diagonal argument is a proof in set theory.
 
 While we do not need to fully understand the proof and its consequences, this approach uses very similar ideas.
 
-We start by initializing the answer ans to an empty string. To build ans, we need to assign either "0" or "1" to each index i for indices 0 to n - 1. How do we assign them so ans is guaranteed to be different from every string in nums? We know that two strings are different, as long as they differ by at least one character. We can intentionally construct our ans based on this fact.
+We start by initializing the answer ans to an empty string. To build ans, we need to assign either "0" or "1" to each index i for indices 0 to n - 1. 
+How do we assign them so ans is guaranteed to be different from every string in nums? 
+We know that two strings are different, as long as they differ by at least one character. We can intentionally construct our ans based on this fact.
 
-For each index i, we will check the ithi^{th}i 
-th
-  character of the ithi^{th}i 
-th
-  string in nums. That is, we check curr = nums[i][i]. We then assign ans[i] to the opposite of curr. That is, if curr = "0", we assign ans[i] = "1". If curr = "1", we assign ans[i] = "0".
+For each index i, we will check the ith character of ith string  in nums. 
+That is, we check curr = nums[i][i].
+We then assign ans[i] to the opposite of curr. That is, if curr = "0", we assign ans[i] = "1". If curr = "1", we assign ans[i] = "0".
 
 What is the point of this strategy? ans will differ from every string in at least one position. More specifically:
 
@@ -22,4 +22,5 @@ ans differs from nums[2] in nums[2][2].
 ans differs from nums[n - 1] in nums[n - 1][n - 1].
 Thus, it is guaranteed that ans does not appear in nums and is a valid answer.
 
-This strategy is applicable because both the length of ans and the length of each string in nums are larger than or equal to n, the number of strings in nums. Therefore, we can find one unique position for each string in nums.
+This strategy is applicable because both the length of ans and the length of each string in nums are larger than or equal to n, the number of strings in nums. 
+Therefore, we can find one unique position for each string in nums.
